--- a/src/style/HomeView.css
+++ b/src/style/HomeView.css
@@ -318,7 +318,7 @@ body:has(.home) {
 
 /* Join Us Section */
 .join-section-new {
-  padding: 80px 0 100px 0;
+  padding: 0;
   text-align: center;
   background-image: url('/imagines/dibu1.jpg');
   background-size: 100%;
